--- a/TrackYourCatchCO/src/app/home/home.component.html
+++ b/TrackYourCatchCO/src/app/home/home.component.html
@@ -1,2 +1,11 @@
 <h1>Angular Calculator</h1>
 <h2>A simple calculator with login</h2>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <h1>Hangman Game</h1>
+      <h2>Using Angular and MongoDB</h2>
+    </div>
+  </div>
+</div>
