--- a/crud-app/src/app/navbar/navbar/navbar.component.html
+++ b/crud-app/src/app/navbar/navbar/navbar.component.html
@@ -4,7 +4,6 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarsExample04">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
@@ -13,7 +12,14 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="add-employee">Add Employee</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" *ngIf="!isAuthenticated" routerLink="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" *ngIf="isAuthenticated" (click)="logout()" href="">Logout</a>
+        </li> 
       </ul>
     </div>
+
   </div>
 </nav>
