--- a/TrackYourCatchCO/src/styles.css
+++ b/TrackYourCatchCO/src/styles.css
@@ -1,8 +1,1 @@
-body {
-  margin: 0;
-  font-family: sans-serif;
-}
-
-h1, h2 {
-  text-align: center;
-}
+/* You can add global styles to this file, and also import other style files */
