fixed delete method

--- a/TrackYourCatchCO/src/app/trip/trip/trip.component.html
+++ b/TrackYourCatchCO/src/app/trip/trip/trip.component.html
@@ -17,7 +17,7 @@
       <td>{{emp.salary}}</td>
       <td>
         <button class="btn btn-primary btn-sm mx-auto" routerLink="edit/{{emp._id}}">Edit</button>
-        <button class="btn btn-danger btn-sm mx-auto" (click)="deleteData(emp._id, emp.uid)" >Delete</button>
+        <button class="btn btn-danger btn-sm mx-auto" (click)="deleteData(emp._id)" >Delete</button>
       </td>
     </tr>
   </tbody>
