--- a/TrackYourCatchCO/src/app/navbar/navbar/navbar.component.html
+++ b/TrackYourCatchCO/src/app/navbar/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">CRUD-App</a>
+    <a class="navbar-brand" href="#">TrackYourCatchCO</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,7 +10,7 @@
           <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="add-employee">Add Employee</a>
+          <a class="nav-link" routerLink="add-trip">Add Trip</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" *ngIf="!isAuthenticated" routerLink="/login">Login</a>
