--- a/TrackYourCatchCO/src/app/trip/edit-trip/edit-trip.component.html
+++ b/TrackYourCatchCO/src/app/trip/edit-trip/edit-trip.component.html
@@ -1,22 +1,24 @@
 <div class="container">
-  <form (ngSubmit)="insertData()" [formGroup]="form">
+  <form (ngSubmit)="updateData()" [formGroup]="form">
     <div class="form-group">
+
       <label for="tripName">Trip Name</label>
       <input type="text" formControlName="tripName" [ngClass]="{'is-invalid':submitted && f.tripName.errors}" class="form-control" placeholder="Enter Trip Name">
-
-      <div *ngIf="submitted && f.tripName.errors" class="invalid-feedback">
-        <div *ngIf="f.tripName.errors.required">Name is required</div>
-      </div>
       
+      <div *ngIf="submitted && f.tripName.errors" class="invalid-feedback">
+        <div *ngIf="f.tripName.errors.required">Trip Name is required</div>
+      </div>
+
     </div>
 
     <div class="form-group">
-      <label for="location">location</label>
+      <label for="location">Location</label>
       <input type="text" formControlName="location" [ngClass]="{'is-invalid':submitted && f.location.errors}" class="form-control" placeholder="Enter Location">
 
       <div *ngIf="submitted && f.location.errors" class="invalid-feedback">
         <div *ngIf="f.location.errors.required">Location is required</div>
       </div>
+
     </div>
 
     <div class="form-group">
