--- a/TrackYourCatchCO/src/app/trip/trip/trip.component.html
+++ b/TrackYourCatchCO/src/app/trip/trip/trip.component.html
@@ -2,9 +2,9 @@
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Salary</th>
+      <th scope="col">Trip Name</th>
+      <th scope="col">Location</th>
+      <th scope="col">Date</th>
       <th scope="col">Action</th>
     </tr>
   </thead>
@@ -12,9 +12,9 @@
   <tbody>
     <tr *ngFor="let emp of employees; let i = index">
       <td>{{i + 1}}</td>
-      <td>{{emp.name}}</td>
-      <td>{{emp.email}}</td>
-      <td>{{emp.salary}}</td>
+      <td>{{emp.tripName}}</td>
+      <td>{{emp.location}}</td>
+      <td>{{emp.date}}</td>
       <td>
         <button class="btn btn-primary btn-sm mx-auto" routerLink="edit/{{emp._id}}">Edit</button>
         <button class="btn btn-danger btn-sm mx-auto" (click)="deleteData(emp._id)" >Delete</button>
