--- a/TrackYourCatchCO/src/app/navbar/navbar/navbar.component.html
+++ b/TrackYourCatchCO/src/app/navbar/navbar/navbar.component.html
@@ -16,7 +16,7 @@
           <a class="nav-link" *ngIf="!isAuthenticated" routerLink="/login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" *ngIf="isAuthenticated" (click)="logout()" href="">Logout</a>
+          <a class="nav-link" *ngIf="isAuthenticated" (click)="logout();removeUID()" href="">Logout</a>
         </li> 
       </ul>
     </div>
