--- a/TrackYourCatchCO/src/app/trip/trip/trip.component.html
+++ b/TrackYourCatchCO/src/app/trip/trip/trip.component.html
@@ -16,7 +16,7 @@
       <td>{{trip.location}}</td>
       <td>{{trip.date}}</td>
       <td>
-        <button class="btn btn-success btn-sm mx-auto" routerLink="trip/{{trip._id}}/catches">View</button>
+        <button class="btn btn-success btn-sm mx-auto" routerLink="trips/{{trip._id}}/catches">View</button>
         <button class="btn btn-primary btn-sm mx-auto" routerLink="edit/{{trip._id}}">Edit</button>
         <button class="btn btn-danger btn-sm mx-auto" (click)="deleteData(trip._id)" >Delete</button>
       </td>
