--- a/msse663-pokedex/src/app/dashboard/dashboard.component.html
+++ b/msse663-pokedex/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
-<h1>Recent Pokemon Viewed</h1>
-<p>Count: {{pokemen.length}}</p>
-<ul>
-  <li *ngFor=" let pokemon of pokemen">{{ pokemon }}</li>
-</ul>
+<div *ngIf="(pokemen$ | async) as pokemen">
+  <h1>Recent Pokemon Viewed</h1>
+  <p>Count: {{pokemen.length}}</p>
+  <ul>
+    <li *ngFor=" let pokemon of pokemen">{{ pokemon.name }}</li>
+  </ul>
+</div>
