tweaked base unit tests and updated function names

--- a/TrackYourCatchCO/src/app/catch/catch/catch.component.html
+++ b/TrackYourCatchCO/src/app/catch/catch/catch.component.html
@@ -1,3 +1,9 @@
+<!--
+  Base structure for modal sourced form:
+  https://www.remotestack.io/angular-bootstrap-modal-popup-tutorial-example/
+
+  Second modal added to update the content of a catch already added
+-->
 <div class="table">
   <thead>
     <tr>
@@ -18,19 +24,18 @@
       <td>{{catch.length}}</td>
       <td>{{catch.location}}</td>
       <td>
-        <!--<button class="btn btn-info btn-sm mx-auto" routerLink="trip/{{catch._id}}/catches">Info</button>-->
-        <button class="btn btn-primary btn-sm mx-auto" (click)="getCatchData(catch._id);triggerModal(modalData2, 'modal-basic-title2')">Edit</button>
-        <button class="btn btn-danger btn-sm mx-auto" (click)="deleteData(catch._uid, catch._tripId, catch._id)" >Delete</button>
+        <button class="btn btn-primary btn-sm mx-auto" (click)="getCatchData(catch._id);triggerModal(updateModalData, 'edit-catch-modal')">Edit</button>
+        <button class="btn btn-danger btn-sm mx-auto" (click)="deleteCatch(catch._uid, catch._tripId, catch._id)" >Delete</button>
       </td>
     </tr>
   </tbody>
 </div>
-  <button class="btn btn-primary" (click)="triggerModal(modalData, 'modal-basic-title')">Add Catch</button>
+  <button class="btn btn-primary" (click)="triggerModal(addModalData, 'add-catch-modal')">Add Catch</button>
 
 
-<ng-template #modalData let-modal>
+<ng-template #addModalData let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Add Catch</h4>
+    <h4 class="modal-title" id="add-catch-modal">Add Catch</h4>
     <button class="btn btn-danger" aria-label="Close" (click)="modal.dismiss()">
       <span aria-hidden="true">×</span>
     </button>
@@ -81,9 +86,9 @@
   </div>
 </ng-template>
 
-<ng-template #modalData2 let-modal>
+<ng-template #updateModalData let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title2">Edit Catch</h4>
+    <h4 class="modal-title" id="edit-catch-modal">Edit Catch</h4>
     <button class="btn btn-danger" aria-label="Close" (click)="modal.dismiss()">
       <span aria-hidden="true">×</span>
     </button>
