--- a/TrackYourCatchCO/src/app/trip/edit-trip/edit-trip.component.html
+++ b/TrackYourCatchCO/src/app/trip/edit-trip/edit-trip.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form (ngSubmit)="updateData()" [formGroup]="form">
+  <form (ngSubmit)="updateTrip()" [formGroup]="form">
     <div class="form-group">
 
       <label for="tripName">Trip Name</label>
