--- a/TrackYourCatchCO/src/app/navbar/navbar/navbar.component.html
+++ b/TrackYourCatchCO/src/app/navbar/navbar/navbar.component.html
@@ -1,9 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">TrackYourCatchCO</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBar1" aria-controls="navBar1" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
     <div class="collapse navbar-collapse" id="navBar1">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
@@ -13,13 +10,12 @@
           <a class="nav-link" routerLink="add-trip">Add Trip</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" *ngIf="!isAuthenticated" routerLink="/login">Login</a>
+          <a class="nav-link" id="loginBtn" *ngIf="!isAuthenticated" routerLink="/login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" *ngIf="isAuthenticated" (click)="logout();" href="">Logout</a>
+          <a class="nav-link" id="logoutBtn" *ngIf="isAuthenticated" (click)="logout();" href="">Logout</a>
         </li> 
       </ul>
     </div>
-
   </div>
 </nav>
